# finetune-efo

./: README.md  pyproject.toml  training.py
manual-mapping/: README.md  biobert-embeddings.py  biobert-similarities.py  biobert2deepseek.r  biobert2openai.py  trait-efo.csv
manual-mapping/shiny/: Dockerfile  app.r  docker-compose.yml
rare_common_ukb/: rare_common_ukb.csv  rare_common_ukb.r  rare_common_ukb.xlsx  rare_rare_ukb.r
