[project]
name = "finetune-efo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.2",
    "datasets>=3.2.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]
