[project]
name = "finetune-efo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "bert-serving-client>=1.10.0",
    "bert-serving-server>=1.10.0",
    "bitsandbytes>=0.45.2",
    "datasets>=3.2.0",
    "dotenv>=0.9.9",
    "fs>=2.4.16",
    "numpy==1.26.4",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "sentence-transformers>=3.4.1",
    "tensorflow>=2.14.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]

[tool.uv.workspace]
members = ["manual-mapping/manual-mapping"]
